# n-queens-visualization

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  version.h.in
.github/workflows/: build.yml
